Release 1.2.0 (#54)
* Feature.schedule parser (#50)

* Added parsing groups and adding them to db

* Added parsing schedule from rasp.dmami.ru

* Update version and last small fixes

* Added restart always to raspyx container

* Returned golang:1.24 instead golang:1.24-alpine

* Added session parser

* Switched to 1.2.0
